syntax="proto3";

package permissions;
option go_package = "ms/gateway/pb";

service PermissionsService {
    rpc FindAll(FindAllPermissionsRequest) returns (FindAllPermissionsResponse);
    rpc FindOneById(FindOnePermissionByIdRequest) returns (FindOnePermissionByIdResponse);
}

message Permission {
    int32 id = 1;
    string name = 2;
}

message FindAllPermissionsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message FindAllPermissionsResponse {
    int32 page = 1;
    int32 limit = 2;
    int64 count = 3;
    repeated Permission permissions = 4;
}

message FindOnePermissionByIdRequest {
    int32 id = 1;
}

message FindOnePermissionByIdResponse {
    Permission permission = 1;
}

enum PermissionType {
    PERMISSION_UNKNOWN = 0;

    DASHBOARD_PRODUCT_VIEW = 1;
    DASHBOARD_PRODUCT_CREATE = 2;
    DASHBOARD_PRODUCT_UPDATE = 3;
    DASHBOARD_PRODUCT_DELETE = 4;

    DASHBOARD_ROLE_VIEW = 5;
    DASHBOARD_ROLE_CREATE = 6;
    DASHBOARD_ROLE_UPDATE = 7;
    DASHBOARD_ROLE_DELETE = 8;
    DASHBOARD_ROLE_ASSIGN = 9;
    DASHBOARD_ROLE_UN_ASSIGN = 10;

    DASHBOARD_ORDER_VIEW = 11;

    ORDER_PURCHASE = 12;
    ORDER_UPDATE_STATUS = 13;
    ORDER_CANCEL = 14;

    USER_VIEW = 15;
    USER_CREATE = 16;
    USER_UPDATE = 17;
    USER_DELETE = 18;

    DASHBOARD_USER_DELETE = 19;
}